python-server-main/k8s_backup/python/ingress.yaml
# fastapi-service Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-service
spec:
  rules:
    - host: fastapi.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 1248
